--- a/semana 2/typescript/src/package.json
+++ b/semana 2/typescript/src/package.json
@@ -3,6 +3,7 @@
     "build": "tsc"
   },
   "devDependencies": {
-    "typescript": "^4.7.3"
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.4"
   }
 }
